# monopoly4u-sockets

./: .env  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt  test.txt  text.txt
.github/workflows/: notify_main_repo.yml
src/: config.py  main.py  redis_settings.py  socketio_handlers.py
